--- a/employees-api/package.json
+++ b/employees-api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon src/app.js",
     "swagger-autogen": "node src/swagger.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test jest --runInBand"
   },
   "keywords": [],
   "author": "",
