Adding the condition that the server does not listen on port 3000 if the process running is swagger.

--- a/employees-api/package.json
+++ b/employees-api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/app.js",
-    "swagger-autogen": "node src/swagger.js",
+    "swagger-autogen": "NODE_ENV=swagger node src/swagger.js",
     "test": "NODE_ENV=test jest --runInBand"
   },
   "keywords": [],
